--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,3 +3,39 @@ html {
   font-family: "Inconsolata";
   color: "#21242C";
 }
+
+.link {
+  color: #1865f2;
+}
+
+.hoverTile {
+  background-color: #f7f8fa;
+}
+
+.searchBar {
+  background-color: #00000011;
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    background-color: #1b1b1b;
+    color: white;
+  }
+  a {
+    color: #ffb100;
+  }
+  .link {
+    color: #ffb100;
+  }
+  .hoverTile {
+    background-color: #ffffff0d;
+  }
+  .searchBar {
+    background-color: #0000ff44;
+    color: white;
+  }
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+  /*TODO implement?*/
+}
